--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "remotion": "remotion studio",
+    "render": "remotion render"
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "canvas": "^2.11.2",
+    "fabric": "^5.3.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-easy-crop": "^5.0.7",
+    "remotion": "^4.0.176"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
